platform/deploy/infra/prometheus-operator/templates/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-mtls
  namespace: observability
spec:
  mtls:
    mode: STRICT
