platform/deploy/infra/prometheus-operator/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus-dr
  namespace: observability
spec:
  host: kube-prometheus-stack-prometheus.observability.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
